<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
                name="model"
                type="com.architecture.ui.fragments.room.RoomViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="@dimen/dimen_300"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_20"
            android:background="#FFFFFF"
            android:foregroundGravity="center">

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/headerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_user"
                android:textSize="@dimen/txt_dimen_16"
                android:padding="@dimen/dimen_10"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        <View
                android:id="@+id/header_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_2"
                android:background="@color/colorPrimaryDark"
                android:layout_marginBottom="@dimen/dimen_10"
                app:layout_constraintTop_toBottomOf="@+id/headerText"/>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiLayout_first_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10"
                style="@style/OutlinedTextLabel"
                app:layout_constraintTop_toBottomOf="@+id/header_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={model.name}"
                    android:hint="@string/name_hint"
                    android:imeOptions="actionNext"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiLayout_last_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10"
                style="@style/OutlinedTextLabel"
                app:layout_constraintTop_toBottomOf="@+id/tiLayout_first_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/age_hint"
                    android:text="@={model.age}"
                    android:inputType="number"
                    android:imeOptions="actionNext"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiLayout_age"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10"
                style="@style/OutlinedTextLabel"
                app:layout_constraintTop_toBottomOf="@+id/tiLayout_last_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_salary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/salary_hint"
                    android:text="@={model.salary}"
                    android:imeOptions="actionDone"
                    android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add_update"
                android:layout_width="0dp"
                android:layout_height="@dimen/dimen_56"
                android:text="@string/add"
                android:layout_margin="@dimen/dimen_10"
                app:layout_constraintTop_toBottomOf="@+id/tiLayout_age"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_cancel"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="@dimen/dimen_56"
                android:text="@string/cancel"
                android:layout_margin="@dimen/dimen_10"
                app:layout_constraintTop_toBottomOf="@+id/tiLayout_age"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_add_update"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>