<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
                name="model"
                type="com.architecture.data.wrapper.User" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.50" />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/headerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_details"
                android:padding="@dimen/dimen_10"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        <View
                android:id="@+id/header_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_2"
                android:background="@color/colorPrimaryDark"
                android:layout_marginBottom="@dimen/dimen_10"
                app:layout_constraintTop_toBottomOf="@+id/headerText"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/lblName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_10"
                android:text="@string/name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header_view" />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_10"
                android:text="@{model.name}"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/lblName" />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/lblAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_10"
                android:text="@string/age"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblName" />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_10"
                android:text="@{String.valueOf(model.age)}"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/lblAge" />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/lblSalary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_10"
                android:text="@string/salary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblAge" />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSalary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_10"
                android:text="@{String.valueOf(model.salary)}"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/lblSalary" />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:layout_marginBottom="@dimen/dimen_10"
                android:padding="@dimen/dimen_10"
                android:text="@string/ok"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblSalary" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>