<?xml version="1.0" encoding="utf-8"?><!--<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="model"
                type="com.architecture.ui.fragments.workmanager.WorkViewModel" />

    </data>-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/txt_dimen_16"
        tools:context=".ui.fragments.workmanager.WorkFragment">

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilFirstNo"
            style="@style/OutlinedTextLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_16"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtFirstNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/firstNo"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilSecNo"
            style="@style/OutlinedTextLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16"
            app:layout_constraintTop_toBottomOf="@+id/tilFirstNo">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtSecNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/secNo"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_56"
            android:layout_marginTop="@dimen/dimen_16"
            android:text="@string/add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilSecNo" />

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/resultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/btnAdd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnAdd" />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPeriodic"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_56"
            android:layout_marginTop="@dimen/dimen_16"
            android:text="@string/periodic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAdd" />

</androidx.constraintlayout.widget.ConstraintLayout><!--</layout>-->